feat(HttpRequest): 요청 쿠키로 세션 저장, 조회 기능 추가